2011-01-12  Koan-Sin Tan  <koansin.tan@gmail.com>

        Reviewed by Martin Robinson.

        [Gtk] WebKitGtk+ doesn't build on Mac OS X 10.6
        https://bugs.webkit.org/show_bug.cgi?id=50867

        * config.h: Don't disallow ctype for (OS(DARWIN) && PLATFORM(GTK))
        Many GTK+ related files include <libintl.h> or <glib/gi18n-lib.h>.
        On Mac, <libintl.h> includes <xlocale.h>. <xclocale.h> includes 
        <xlocale/_ctype.h>, which uses isacii().
        * platform/UUID.cpp:
        (WebCore::createCanonicalUUIDString): For OS(DARWIN) && !PLATFORM(CF)
        use the Chromium Linux UUID generation.

2011-01-12  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Eric Seidel.

        [CSS Gradients] One color stop should not paint anything for linear-gradient
        https://bugs.webkit.org/show_bug.cgi?id=52259
        
        Share color stop parsing code between linear and radial gradients.
        Consider the gradient invalid if it has less than two color stops.

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseLinearGradient):
        (WebCore::CSSParser::parseRadialGradient):
        (WebCore::CSSParser::parseGradientColorStops):
        * css/CSSParser.h:

2011-01-12  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Pavel Feldman.

        Fix inconsistencies in Inspector strings found by the new check-inspector-strings script.

        https://bugs.webkit.org/show_bug.cgi?id=52295

        * English.lproj/localizedStrings.js:
        * inspector/front-end/BreakpointsSidebarPane.js:
        (WebInspector.EventListenerBreakpointsSidebarPane):
        * inspector/front-end/ProfilesPanel.js:
        (WebInspector.ProfilesPanel.prototype.setRecordingProfile):
        * inspector/front-end/Resource.js:
        (WebInspector.Resource.Type.toString):
        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.ResourceRevisionTreeElement):
        * inspector/front-end/utilities.js:
        ():
