@@ -1,3 +1,14 @@
+2011-01-12  Andrey Kosyakov  <caseq@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: cookie table is multiplied after repeated switching to cookies tab in network item view
+        Only create cookiesTable is it hasn't been done yet.
+        https://bugs.webkit.org/show_bug.cgi?id=52303
+
+        * inspector/front-end/ResourceCookiesView.js:
+        (WebInspector.ResourceCookiesView.prototype.show):
+
 2011-01-12  Koan-Sin Tan  <koansin.tan@gmail.com>
 
         Reviewed by Martin Robinson.
